add static files server

--- a/.env.sample
+++ b/.env.sample
@@ -4,5 +4,11 @@ WS_PORT=
 # OSC server port
 OSC_PORT=
 
+# Static files server port
+STATIC_PORT=
+
 # WebSocket URL to use in frontend
 VITE_WS_URL=
+
+# Enable more verbose logs from the server
+VERBOSE_LOGS=
