--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "osc": "^2.4.1",
     "p5": "^1.2.0",
     "preact": "^10.5.9",
