--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
-# WebSocket server port
+# WebSocket server port (default 8080)
 WS_PORT=
 
-# OSC server port
+# OSC server port (default 57121)
 OSC_PORT=
 
-# Static files server port
+# Static files server port (default 8081);
 STATIC_PORT=
 
 # WebSocket URL to use in frontend
