--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starter-p5",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "node node_modules/esbuild/install.js",
     "dev:client": "vite",
     "dev:server": "nodemon server.mjs",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
